# MetroNow

./: .dockerignore  .env.example  .env.local  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  RESEARCH-FINDINGS.md  RESEARCH-PROMPT.md  pyproject.toml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  eslint.yml  npm-publish-github-packages.yml  stale.yml
deploy/: .env.example  Caddyfile  bootstrap.sh  docker-compose.yml  update.sh
docs/: change-log.html  cli-reference.md  glossary.md  independent-audit.html  metro-skills-audit-2026-05-09.md  metro-skills-remediation-2026-05-09.md  metronow-atlas.html  motis-deployment.md  oracle-deploy.md  sources.md  tests-overview.md  web-architecture.md
docs/community-prep/: 00-README.md  01-wiki-page.md  02-talk-us-post.md  03-minh-outreach.md  04-pre-flight-checklist.md  05-transit-api-compliance.md
docs/explainers/: README.md  conflation-matcher.md  conventions.md  detector-taxonomy.md  external-feeds.md  history-filter.md  (+8 more)
my-clerk-app/: .env.local  package-lock.json  package.json
tests/: test_bus_routes.py  test_changeset.py  test_classify.py  test_cli_transit.py  test_conflate.py  test_conflate_pagination.py  test_detectors.py  test_feed_errors.py  test_gaps.py  test_geo.py  test_gtfs.py  test_gtfs_rt.py  test_history_filter.py  test_maproulette.py  test_motis.py  test_notes.py  test_osmose.py  test_polygons.py  test_preflight.py  test_review.py  test_route_diff.py  test_tiger2024.py  test_transit.py
web/: package-lock.json  package.json  server.js
(+88 files in other folders)
