[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osm"
version = "0.1.0"
description = "TIGER/OSM audit and correction pipeline for Hamilton County MetroNow zones"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31,<3",
    "openpyxl>=3.1,<4",
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "shapely>=2.0",
    "gtfs-realtime-bindings>=1.0",  # SORTA GTFS-RT protobuf parsing (osm.gtfs_rt)
]

[project.scripts]
osm = "osm.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Runtime data files. dashboard.py reads templates/dashboard.html;
# polygons.py reads zones/*.geojson. Without this declaration these
# files are excluded from the wheel and the package is broken when
# installed (vs. editable from a checkout). Verified 2026-05-09 by
# building a wheel with `pip wheel . --no-deps` and confirming both
# files were absent from the resulting archive.
osm = ["templates/*.html", "zones/*.geojson"]
